# QLed

./: qled.cpp  qled.h  qled.qrc  qledplugin.cpp  qledplugin.h  qledplugin.pro
Python/: pyproject.toml
Python/qled/: __init__.py  qled.py  resources.qrc
example/: dialog.ui  example.pro
